# nonebot-plugin-weather-rank

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  pyproject.toml
.github/workflows/: release.yml  type_check.yml
migrations/versions/: 0f4be1249ed9_create_db.py
nonebot_plugin_weather_rank/: __init__.py  config.py
nonebot_plugin_weather_rank/utils/: addition_for_htmlrender.py  constant.py  model.py  schema.py  services.py
nonebot_plugin_weather_rank/weather_rank/: __init__.py  help.md
nonebot_plugin_weather_rank/weather_rank/templates/: rank_card.html  rank_card.html.jinja2  weather_card.html  weather_card.html.jinja2
tests/: conftest.py  fake.py  test_weather_rank.py
